<resources>
    <string name="app_name">SellToBuy</string>
    <string name="Product_name">Product name: </string>
    <string name="log_in">Log in</string>
    <string name="product_name">product name:</string>
    <string name="final_date_to_buy">final date to buy:</string>
    <string name="current_price">current price:</string>
    <string name="want_this_product_raise_the_price">Want this product? raise the price!</string>
    <string name="info">info:</string>
    <string name="save">save</string>
    <string name="the_products">The products</string>
    <string name="you_have">You have</string>
    <string name="coin">coin</string>
    <string name="sell_to_buy">Sell To Buy</string>
    <string name="sing_in">Sing in</string>
    <string name="you_want_to_sell_a_product">you want to sell a product?</string>
    <string name="name_product">Name product</string>
    <string name="enter_the_details_of_the_product_here">enter the details of the product here:</string>
    <string name="price">Price</string>
    <string name="info_about_the_product">Info about the product</string>
    <string name="announce">announce</string>
    <string name="settings">settings</string>
    <string name="log_out">Log out</string>
    <string name="change_profile">Change profile</string>
    <string name="update_details">update details</string>
    <string name="coins_number">Coins number:</string>
    <string name="email">Email:</string>
    <string name="user_name">User name:</string>
    <string name="name">Name:</string>
    <string name="user_details">User details</string>
    <string name="password">Password</string>
    <string name="finish">finish</string>
    <string name="coins">coins</string>
    <string name="startdate">startdate</string>
    <string name="finaldate">finaldate</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="coins2">coins</string>
    <string name="you_want_to_sign_in">You want to sign in?</string>
    <string name="enter_your_details_here_and_enjoy">Enter your details here and enjoy</string>
    <string name="phone_number">Phone number</string>
    <string name="approval">Approval</string>
    <string name="society">society</string>
    <string name="enter_the_society_of_this_product">Enter the society of this product</string>
    <string name="ok">ok</string>
    <string name="what_do_you_want_to_update">what do you want to update?</string>
    <string name="close">close</string>

    <string-array name="types">
        <item>General product</item>
        <item>Tech product</item>
    </string-array>


</resources>