<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity"
    android:background="@drawable/tree">

    <TextView
        android:id="@+id/titlesetting"
        android:layout_width="246dp"
        android:layout_height="100dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="103dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>



    <Button
        android:id="@+id/logout"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="283dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlesetting"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/change"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="283dp"
        android:text="@string/change_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>