<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BuyOneProduct"
    android:background="@drawable/cash3">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="134dp"
        android:layout_height="107dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="327dp"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage" />

    <TextView
        android:id="@+id/finalDate"
        android:layout_width="376dp"
        android:layout_height="73dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="329dp"
        android:text="@string/final_date_to_buy"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameProduct"
        app:layout_constraintTop_toBottomOf="@+id/nameProduct" />

    <TextView
        android:id="@+id/currentPrice"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="327dp"
        android:text="@string/current_price"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/finalDate"
        app:layout_constraintTop_toBottomOf="@+id/finalDate" />

    <Button
        android:id="@+id/price"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="#03A9F4"
        android:text="+"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPrice" />

    <TextView
        android:id="@+id/wantBuy"
        android:layout_width="271dp"
        android:layout_height="76dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="315dp"
        android:text="@string/want_this_product_raise_the_price"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPrice" />

    <TextView
        android:id="@+id/TextInfo"
        android:layout_width="360dp"
        android:layout_height="108dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="33dp"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPrice" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="304dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="51dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wantBuy" />

    <TextView
        android:id="@+id/society"
        android:layout_width="350dp"
        android:layout_height="74dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>